<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="8dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/main_logo_large"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/app_name_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_app_name"
            android:layout_below="@id/main_logo"
            android:layout_marginTop="16dp"
            style="@android:style/TextAppearance.Large"/>

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/app_name_version"
            android:text="@string/about_disclaimer"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            style="@style/BodyTextStyle"
            android:textColor="@color/colorTranslucentBlack"
            android:lineSpacingMultiplier="1.35"/>

        <Button
            android:id="@+id/go_to_repo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/action_view_repo"
            style="@style/ButtonTheme"
            android:layout_below="@id/disclaimer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>