<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.FairDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- The Collapsing Toolbar with the parallax image  -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:minHeight="100dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <com.example.ericdesedas.expohub.presentation.widgets.AspectRatioImageView
                android:id="@+id/fair_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:transitionName="@string/transition_fair_card_image"
                app:layout_collapseMode="parallax"
                app:heightRatio="0.67"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Main Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Description -->
            <android.support.v7.widget.CardView
                android:id="@+id/content_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:transitionName="@string/transition_fair_card_content"
                app:cardElevation="4dp">

                <ProgressBar
                    android:id="@+id/loading_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    tools:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/error_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/error_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:text="Network Error"/>

                    <Button
                        android:id="@+id/retry_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/action_retry"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fair_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TitleTextStyle"
                        android:layout_marginTop="@dimen/card_detail_top_margin"
                        android:layout_marginLeft="@dimen/card_detail_left_margin"
                        android:layout_marginRight="@dimen/card_detail_right_margin"
                        android:layout_marginStart="@dimen/card_detail_left_margin"
                        android:layout_marginEnd="@dimen/card_detail_right_margin"
                        tools:text="Generic Fair Title"/>

                    <TextView
                        android:id="@+id/fair_dates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SubTitleTextView"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="@dimen/card_detail_left_margin"
                        android:layout_marginRight="@dimen/card_detail_right_margin"
                        android:layout_marginStart="@dimen/card_detail_left_margin"
                        android:layout_marginEnd="@dimen/card_detail_right_margin"
                        tools:text="Jan 4, 2010 - Jan 3, 20202"/>

                    <TextView
                        android:id="@+id/fair_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextStyle"
                        android:layout_marginLeft="@dimen/card_detail_left_margin"
                        android:layout_marginRight="@dimen/card_detail_right_margin"
                        android:layout_marginStart="@dimen/card_detail_left_margin"
                        android:layout_marginEnd="@dimen/card_detail_right_margin"
                        android:layout_marginTop="12dp"
                        tools:text="So, this is a long description to test some view properties that should be assigned elsewhere. By any means, do not define text here (i'm only doing it because it's via tools)"/>

                    <LinearLayout
                        android:id="@+id/content_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:layout_marginTop="@dimen/default_element_gap">

                        <LinearLayout
                            android:id="@+id/events_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_event"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/label_events"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/news_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_news"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/label_news"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/stands_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp"
                            android:foreground="?android:attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_stands"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/label_stands"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Map Card -->
            <android.support.v7.widget.CardView
                android:id="@+id/map_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/location_map"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#ccc" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:layout_below="@id/location_map">

                        <TextView
                            android:id="@+id/location_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/OptionTextStyle"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            tools:text="Teatro balboa, edificio 333"/>

                        <ImageView
                            android:id="@+id/location_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_action_maps_directions_car"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!-- Options Card -->
            <android.support.v7.widget.CardView
                android:id="@+id/options_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/sponsors_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="horizontal"
                        android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/OptionTextStyle"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:text="@string/label_sponsors"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_action_hardware_keyboard_arrow_right"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>