<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll"
            android:minHeight="1px"
            android:fitsSystemWindows="true"
            android:background="@null"
            app:titleEnabled="false">

            <com.example.ericdesedas.expohub.presentation.widgets.AspectRatioImageView
                android:id="@+id/fair_event_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:heightRatio="0.5"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/general_placeholder"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/header_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:id="@+id/fair_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="80dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                tools:text="Teamwork, An Essential Part of Your Work Life"/>

            <TextView
                android:id="@+id/fair_event_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="4dp"
                tools:text="8:00 A.M. to 5:00 P.M."/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/content_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="4dp">

                <ProgressBar
                    android:id="@+id/loading_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    tools:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/error_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/error_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:text="Network Error"/>

                    <Button
                        android:id="@+id/retry_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/action_retry"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/main_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="24dp"
                    android:transitionName="@string/transition_fair_event_card">

                    <TextView
                        android:id="@+id/content_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="20dp"
                        style="@style/BodyTextStyle"
                        android:lineSpacingMultiplier="1.2"
                        android:textSize="15sp"
                        tools:text="@string/placeholder_long_string"/>

                    <TextView
                        android:id="@+id/speakers_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="Speakers"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_below="@id/content_text"/>

                    <LinearLayout
                        android:id="@+id/speakers_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/speakers_title"
                        android:orientation="vertical">

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>